"html revision and jsonify strings"

--- a/templates/alerts/index.html
+++ b/templates/alerts/index.html
@@ -15,7 +15,7 @@
             <a class="btn btn-secondary" href="{{ url_for('alerts.edit_alert', alert_id=alert._id) }}">
                 Edit
             </a>
-            <a class="btn btn-danger mt-3" href="{{ url_for('alerts.delete_alert', alert_id=alert._id) }}">
+            <a class="btn btn-danger" href="{{ url_for('alerts.delete_alert', alert_id=alert._id) }}">
                 Permanently Delete Alert
             </a>
         </div>
