--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
+                <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
                 <a class="nav-item nav-link" href="{{ url_for('stores.index') }}">Stores</a>
                 <a class="nav-item nav-link" href="{{ url_for('alerts.index') }}">Alerts</a>
                 <a class="nav-item nav-link" href="{{ url_for('users.login_user') }}">Log in</a>
