--- a/templates/alerts/index.html
+++ b/templates/alerts/index.html
@@ -10,7 +10,10 @@
         <div class="list-group-item">
             <h4 class="list-group-item-heading">{{ alert.name }}</h4>
             <p>
-                <a href="{{ alert.item.url }}">{{ alert.item.url }}</a> (last price £{{ alert.item.price }})
+                <a href="{{ alert.item.url }}">{{ alert.item.url }}</a>
+            </p>
+            <p>
+                Last price: £{{ alert.item.price }}
             </p>
             <a class="btn btn-secondary" href="{{ url_for('alerts.edit_alert', alert_id=alert._id) }}">
                 Edit
